fix(dark): fix dark mode on mobile bus page
Fixes #791

--- a/intranet/static/css/dark/bus.scss
+++ b/intranet/static/css/dark/bus.scss
@@ -11,7 +11,9 @@ svg path.a[style*="stroke: black;"] {
 }
 
 @media (max-width: 550px) {
-    .action-view.search-widget .search-widget {
-        background-color: black;
+    .action-view.search-widget {
+        &, .search-widget {
+            background-color: black;
+        }
     }
 }
